@@ -581,6 +581,10 @@
     <last>Wassmer</last>
   </name>
   <name>
+    <first>Joey</first>
+    <last>Richey</last>
+  </name>
+  <name>
     <first>Jon</first>
     <last>Dickinson</last>
   </name>
